[package]
name = "aes"
version = "0.3.2"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
description = "Facade for AES (Rijndael) block ciphers implementations"
documentation = "https://docs.rs/aes"
repository = "https://github.com/Alleysira/block-ciphers"
keywords = ["crypto", "aes", "rijndael", "block-cipher"]
categories = ["cryptography", "no-std"]

[dependencies]
block-cipher-trait = { git = "https://github.com/RustCrypto/traits", rev = "block-cipher-trait-v0.6.0" }

# [target.'cfg(not(all(target_feature="aes", target_feature = "sse2", any(target_arch = "x86_64", target_arch = "x86"))))'.dependencies]
# aes-soft = "0.3"

# [target.'cfg(all(target_feature="aes", target_feature = "sse2", any(target_arch = "x86_64", target_arch = "x86")))'.dependencies]
# aesni = { version = "0.6", default-features = false }

[dev-dependencies]
# block-cipher-trait = { version = "0.6", features = ["dev"] }

[workspace]
